[master] [SV-7][SV-9] Vector model and parse