@@ -1,1 +1,9 @@
 # Silver-Vulture
+
+## JVM flags:
+```
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens=java.base/java.nio=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+```
